# static-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.ps1  build.py  build.sh  build.ts  index.ts  package.json
.qoder/repowiki/zh/content/: API参考.md  快速开始.md  扩展与定制.md  技术栈与依赖.md  故障排除.md  架构设计.md  贡献指南.md  配置与部署.md  项目概述.md
.qoder/repowiki/zh/content/核心功能详解/: S3文件服务.md  SPA路由支持.md  安全特性.md  核心功能详解.md  缓存策略.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
.qwen/: PROJECT_SUMMARY.md
src/: error.rs  handlers.rs  lib.rs  main.rs  s3.rs  storage.rs  utils.rs
src/config/: mod.rs
src/handlers/: balance.rs  chat_completions.rs  compatible_mode.rs  constants.rs  files.rs  mod.rs  models.rs  proxy.rs  spa_key.rs
src/s3/: cache.rs  config.rs  handlers.rs  mod.rs  presign.rs  s3_ops.rs
src/utils/: cache.rs  headers.rs  path.rs  proxy.rs  s3.rs
tests/: api_test.rs  integration_test.rs
