[package]
name = "static-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.5", features = ["macros"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
aws-config = { version = "1.8.6", features = ["behavior-version-latest", "rustls"] }
aws-sdk-s3 = "1.106.0"
dotenvy = "0.15.7"
http = "1.3.1"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["stream"] }
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["local-time", "time"] }
cached = { version = "0.56.0", features = ["async"] }
