[package]
name = "static-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
aws-config = { version = "1.8", features = ["behavior-version-latest", "rustls"] }
aws-sdk-s3 = "1.110"
dotenvy = "0.15"
http = "1.3"
tokio = { version = "1.48", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time", "time"] }
cached = { version = "0.56", features = ["async"] }
mime_guess = "2.0"
