[package]
name = "static-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
aws-config = { version = "1.8.15", features = ["behavior-version-latest", "rustls"] }
aws-sdk-s3 = "1.126.0"
dotenvy = "0.15"
http = "1.4"
tokio = { version = "1.50", features = ["full"] }
reqwest = { version = "0.13.2", features = ["stream"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["local-time", "time"] }
cached = { version = "0.58", features = ["async"] }
mime_guess = "2.0"
thiserror = "2.0"
